# geosearch

./: .coverage  .flake8  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  Dockerfile  Jenkinsfile  Makefile  README.md  docker-compose.debug.yml  docker-compose.yml  download_dbs.sh  get-os-token.sh  init_dbs.sh  jwt_keygen.py  pyproject.toml  test_jwk.json
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: pre-commit.yml  test-open-api-spec.yml  test.yaml  test.yml  trigger-geosearch-deploy.yml
.jenkins/: docker-compose-test.yml  docker-compose.yml  runtests.sh
db-scripts/: download-db.sh  download-dbs.sh  init-dbs.sh
src/: .coveragerc  get-token.py  initialize_db.sh  manage.py
src/geosearch/: asgi.py  datasets.py  encoder.py  registry.py  search.py  serializers.py  settings.py  urls.py  views.py
src/geosearch/openapi/: postprocessors.py
static/: staticfiles.json
tests/: conftest.py  settings.py  test_encoder.py  test_registry.py  test_serializer.py  test_views.py  utils.py
tests/files/datasets/dataset/: dataset.json
tests/files/datasets/dataset/field_scope/: v1.json
tests/files/datasets/dataset/table_scope/: v1.json
tests/files/datasets/dataset/table_without_geometry/: v1.json
tests/files/datasets/dataset_geosearch_disabled/: dataset.json
tests/files/datasets/dataset_geosearch_disabled/table_scopes/: v1.json
tests/files/datasets/dataset_scope/: dataset.json
tests/files/datasets/dataset_scope/table/: v1.json
tests/files/datasets/dataset_search/: dataset.json
tests/files/datasets/dataset_search/multipolygon/: v1.json
tests/files/datasets/dataset_search/point/: v1.json
tests/files/datasets/dataset_search/polygon/: v1.json
tests/files/datasets/dataset_search/temporal/: v1.json
tests/files/datasets/dataset_versions/: dataset.json
tests/files/datasets/dataset_versions/table/: v1.json  v2.json
web/: Dockerfile  Dockerfile.dev  geoindex.py  manage.py  requirements.in  requirements.txt  requirements_dev.in  requirements_dev.txt  requirements_to_freeze.txt  test_request.py  uwsgi.ini
web/datapunt_geosearch/: __init__.py  app.py  config.py  datasource.py  elastic.py  settings.py  test_dataset.py  uwsgi.ini
web/datapunt_geosearch/blueprints/: health.py  search.py
web/docker_dir/: docker-entrypoint.sh  geoindex.py  manage.py  uwsgi.ini  wsgi.py
web/docker_dir/datapunt_geosearch/: __init__.py  config.py  datasource.py  test_dataset.py
web/docker_dir/datapunt_geosearch/blueprints/: health.py  search.py  test_api.py
web/geosearch/: .flake8  create_import_index.py  docker-entrypoint.sh  geoindex.py  geosearch.yml  manage.py  pyproject.toml  pytest.ini  test_dataset.py  uwsgi.ini  wsgi.py
web/geosearch/datapunt_geosearch/: __init__.py  authz.py  base_config.py  config.py  config.yaml  datasource.py  db.py  elastic.py  exceptions.py  registry.py  test_config.py
web/geosearch/datapunt_geosearch/blueprints/: engine.py  health.py  search.py  test_api.py
web/geosearch/datapunt_geosearch/openapi/: geosearch.yml
web/geosearch/static/: geosearch.yml
web/geosearch/tests/: conftest.py  test_api.py  test_authz.py  test_bag_dataset.py  test_biz_dataset.py  test_catalogus_endpoint.py  test_dataset_registry.py  test_display_field_camel_case.py  test_external_datasource.py  test_field_type_50_karakters.py  test_health.py  test_monumenten_dataset.py  test_munitie_dataset.py  test_nap_dataset.py  test_opentelemetry.py  test_search_everywhere.py  test_user_context.py
